sidebar scrollbar fixed

--- a/src/assets/scss/vuexy/components/verticalNavMenu.scss
+++ b/src/assets/scss/vuexy/components/verticalNavMenu.scss
@@ -87,7 +87,7 @@
     position: relative;
     margin: auto;
     width: 100%;
-    height: calc(var(--vh, 1vh) * 100 - 69px);
+    height: calc(var(--vh, 1vh) * 100 - 160px);
 
     &:not(.ps) {
       overflow-y: auto;
